# NCEPLIBS-g2c

./: Makefile.in  README.build  autogen.sh  configure  configure.ac
sorc/: Makefile.deps  Makefile.in
